# ai_agent_testing

./: .cursorrules  .env.example  .gitmodules  CLAUDE.md  PYTHON_PROJECT_BEST_PRACTICES.md  README.md  REORGANIZATION_PLAN.md  environment.yml  pyproject.mdc  pyproject.toml
.cursor/rules/: autogen.mdc  langchain.mdc  python.mdc
autogen_testing/: README.md  pyproject.toml
autogen_testing/autogenstudio_ui/: alembic.ini  pyproject.toml
autogen_testing/my_examples/: OpenAIAssistantAPI.py
frameworks/: README.md
frameworks/autogen/: README.md
frameworks/autogen/autogen_testing/autogenstudio_ui/: autogen0404.db
frameworks/autogen/autogen_testing/autogenstudio_ui/alembic/versions/: f8c7496ca754_initial_schema.py
frameworks/autogen/autogen_testing/my_examples/: OpenAIAssistantAPI.py
frameworks/langchain/: README.md
frameworks/react_agent/react-agent-python/: pyproject.toml
frameworks/react_agent/react-agent-python/.langgraph_api/: .langgraph_ops.pckl
frameworks/react_agent/react-agent-python/src/react_agent/: __init__.py  graph.py
frameworks/react_agent/react-agent-python/src/react_agent/tools/: __init__.py  sql_tools.py
langchain_python_code_tutorial/: README.md  python_runner.py
langchain_sql_tutorial/: README.md  sql_tutorial.py
my-sql-agent/: README.md  config.toml
my-sql-agent/src/: .env.example  __init__.py
my-sql-agent/src/agent/: __init__.py  base.py  examples.py  query_classifier.py  sql_agent.py
my-sql-agent/src/config/: llm_config.py  settings.py
my-sql-agent/src/db/: models.py
my-sql-agent/tests/: __init__.py  test_agent.py  test_config.py
react-agent-python/: .env.example  pyproject.toml
react-agent-python/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_retry_counter.pckl
react-agent-python/src/react_agent/: configuration.py  graph.py  prompts.py  utils.py
react-agent-python/src/react_agent/tools/: __init__.py  code_tools.py  search_tools.py  sql_tools.py
shared/: README.md  __init__.py  pyproject.toml
shared/db/: __init__.py  connection.py
shared/observability/: __init__.py  setup.py
shared/utils/: __init__.py  env.py
use_cases/: README.md
use_cases/guard_agents/: README.md
use_cases/guard_agents/prompt_guarding/: README.md  llama-guard-3-testing.py  openAI-moderation-testing.py  pyproject.toml
use_cases/sql_agents/: README.md
use_cases/sql_agents/langchain_sql_tutorial/: pyproject.toml  sql_tutorial.py
use_cases/sql_agents/mcp_sql_agent/: README.md  docker-compose.yml  pyproject.toml
use_cases/sql_agents/mcp_sql_agent/config/grafana/provisioning/datasources/: postgres.yaml
use_cases/sql_agents/mcp_sql_agent/config/mcp-grafana/: config.yaml
use_cases/sql_agents/mcp_sql_agent/config/postgres/: init.sql  readonly-user.sql
use_cases/sql_agents/mcp_sql_agent/notebooks/: mcp_sql_agent_demo.ipynb
use_cases/sql_agents/mcp_sql_agent/src/: __init__.py  mcp_agent.py
use_cases/sql_agents/mcp_sql_agent/tests/: __init__.py  test_mcp_agent.py
use_cases/sql_agents/my-sql-agent/: docker-compose.yml  pyproject.toml
use_cases/sql_agents/my-sql-agent/migrations/: env.py
use_cases/sql_agents/my-sql-agent/scripts/: setup_db.sh
use_cases/sql_agents/my-sql-agent/sql/: init.sql  test_data.sql
use_cases/sql_agents/my-sql-agent/src/config/: settings.py
use_cases/sql_agents/my-sql-agent/src/db/: config.py
use_cases/sql_agents/my-sql-agent/tests/: conftest.py  test_sql_agent.py
