[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ai-agent-testing"
version = "0.1.0"
description = "A practical exploration of various AI agent frameworks and tools"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    {include = "shared"}
]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
ruff = "^0.1.0"