[tool.poetry]
name = "prompt-guarding"
version = "0.1.0"
description = "Examples of prompt guarding and content moderation with LLMs"
authors = ["tcashel <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.0.0"
anthropic = "^0.9.0" 
python-dotenv = "^1.0.0"
pydantic = "^2.0.0"
openlit = "^1.33.8"
shared = {path = "../../../shared", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
ruff = "^0.1.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]