[tool.poetry]
name = "langchain-sql-tutorial"
version = "0.1.0"
description = "Basic tutorial on using LangChain for SQL generation"
authors = ["tcashel <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.0"
langchain-core = "^0.1.0"
langchain-community = "^0.0.10"
langchain-openai = "^0.0.1"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.0"
sqlite3-plus = "^0.1.2"
openlit = "^1.33.8"
shared = {path = "../../../shared", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"