[tool.poetry]
name = "mcp-sql-agent"
version = "0.1.0"
description = "SQL Agent using Model Context Protocol with PostgreSQL, Snowflake, and Grafana"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.14.0"
langchain = "^0.1.13"
langchain-openai = "^0.1.1"
jupyter = "^1.0.0"
pandas = "^2.1.4"
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
snowflake-sqlalchemy = "^1.5.1"
httpx = "^0.26.0"
PyYAML = "^6.0.1"
pydantic = "^2.5.3"
matplotlib = "^3.8.2"
plotly = "^5.18.0"
python-dotenv = "^1.0.0"
mcp-python = ">=0.3.0" # MCP client library

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.12.1"
isort = "^5.13.2"
mypy = "^1.8.0"
ruff = "^0.1.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"